package iterator.CE11;

public abstract class CollectionArr implements IteratorArray{
    public abstract IteratorArray createIterator();

    @Override
    public Object First() {
        return null;
    }

    @Override
    public Object Next() {
        return null;
    }

    @Override
    public Object CurrentItem() {
        return null;
    }

    @Override
    public Boolean isDone() {
        return null;
    }
}
