package iterator.CE11;

public interface IteratorArray {
    Object First();
    Object Next();
    Object CurrentItem();
    Boolean isDone();
}
